# src/main/java/nguye/emarket/backend/controller/UserController.java
@@ -7,7 +7,11 @@ import nguye.emarket.backend.service.implementation.BasicUserService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.io.IOException;
 
 @RestController
 public class UserController implements UserApi {
@@ -48,5 +52,14 @@ public class UserController implements UserApi {
 
         basicUserService.updatePassword(username, updatePasswordRequest);
         return ResponseEntity.ok(new SuccessResponse("Password updated successfully"));
+    }
+
+    @Override
+    public ResponseEntity<SuccessResponse> updateProfilePicture(
+            @PathVariable("username") String username,
+            @RequestPart(value = "file", required = false) MultipartFile file) throws IOException {
+
+        String imageUrl = basicUserService.updateProfilePicture(username, file);
+        return ResponseEntity.ok(new SuccessResponse(imageUrl));
     }
 }
